# lerny-app

./: .eslintrc.js  .gitignore  .ignore  Cargo.toml  README.md  ReadMe.md  index.html  index.js  main.js  markdown-it-13.0.1.tgz  notes.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: default.yaml  main.yml
electron/: electronConstants.js  main-dev.js  main.js  preload.js
src/: App.style.ts  App.tsx  code_editor.rs  global.d.ts  global_singelton.rs  global_singleton.rs  index.html  index.tsx  main.rs  main_application.rs  my_app.rs
src/code_editor/: syntect_layouter.rs
src/components/: CodeBlock.styles.ts  CodeBlock.tsx  CodeEditor.tsx  EditProjectPagePane.tsx  Editor.tsx  IconWrapper.style.ts  MardownViewer.tsx  MarkdownViewer.style.ts  MarkdownViewer.tsx  ProjectAddCard.style.ts  ProjectAddCard.tsx  ProjectCard.style.ts  ProjectCard.tsx  ProjectPagePane.tsx  ProjectPane.style.ts  ShowLearnProjects.style.ts  ShowLearnProjects.tsx  Terminal.tsx  Titlebar.style.ts  Titlebar.tsx  XTermTerminal.tsx
src/constants/: RouterRoutes.ts  Spinners.tsx  font.ts  metrics.ts  routerRoutes.ts  timeouts.ts  webComponentTags.ts
src/globals/: keyboardCapture.ts
src/hooks/: LearnPageHooks.ts  LearnProjectHooks.ts
src/main_application/: main_application_helper.rs
src/markdown-it-extensions/: editorPlugin.tsx  externalLinksPlugin.ts  markdownItComponentPlugin.tsx
src/pages/: CreateLearnPage.style.ts  CreateLearnPage.tsx  EditProjectPage.style.ts  EditProjectPage.tsx  EditSelectionPage.style.ts  EditSelectionPage.tsx  LearnPage.tsx  (+6 more)
(+28 files in other folders)
