[package]
name = "lerny-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
strum = "0.24.1"
strum_macros = "0.24.3"
enum-map = "2.4.1"
syntect = "5.0.0"
console = "0.15.2"
sysinfo = "0.26.6"
libc = "0.2.137"
cfg-if = "1.0.0"
lazy_static = "1.4.0"
